Updated bosses controller, session and firestore client to use subcollection